--- a/pocketLaw_back_end/.env
+++ b/pocketLaw_back_end/.env
@@ -5,8 +5,8 @@ DEBUG=True
 # EMAIL SETTINGS
 EMAIL_USE_TLS=True
 EMAIL_HOST='smtp.gmail.com'
-EMAIL_HOST_USER='testing.dk.tok@gmail.com'
-EMAIL_HOST_PASSWORD='Pass123!'
+EMAIL_HOST_USER='test989595564@gmail.com'
+EMAIL_HOST_PASSWORD='Contra_123'
 EMAIL_PORT=587
 EMAIL_USE_SSL=False
 DEFAULT_FROM_EMAIL='no-reply@poketlaw.com'
